seriedownloader/temp
  File "downloader.py", line 174
    connection.download_links(["http://rapidgator.net/file/08171202ec2b3c170b85c8e1b8a1a70c/PLL508.720p.HDTV.X264-DIMENSION.mkv.html", "http://rapidgator.net/file/bc1b89a073c2878fafba7cede8b0a9e5/Supernatural.S09E13.The.Purge.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/10fc2a51fe0747635d7ecf8a05fcb113/Supernatural.S09E13.The.Purge.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/9ab01ee31285f2dff89334c08df7d12c/Supernatural.S09E14.Captives.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/82123e0bc3bad24cc382fc61349c5ca8/Supernatural.S09E14.Captives.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/86866fc8248f990260530ac5fb86c764/Supernatural.S09E15.THINMAN.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/c44187be5a0c5197ec51c9023e4a3656/Supernatural.S09E15.THINMAN.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/cb84f0413466cbea632e660ff634e3ee/Supernatural.S09E16.Blade.Runners.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/de782971d8ba3fc79278b05fd70435db/Supernatural.S09E16.Blade.Runners.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/5fd48c4e377594318ac7fc02a39e9e3d/Supernatural.S09E17.Mother's.Little.Helper.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/05b1c6a073e2763fecc8988cc5ef679d/Supernatural.S09E17.Mother"s.Little.Helper.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/2bf7012647599420d27233056fbf83df/Supernatural.S09E18.Meta.Fiction.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/6488b4120f117ea21c479c99eb755e4b/Supernatural.S09E18.Meta.Fiction.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/a4315834665ba3ca6dfc5358b9fdc55c/Supernatural.S09E19.Alex.Annie.Alexis.Ann.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/e498663da76d123802f3f7b08457f41d/Supernatural.S09E19.Alex.Annie.Alexis.Ann.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/03498a251d36d84052e5367f4bb1b15e/Supernatural.S09E20.Bloodlines.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/d937be00591687152ab4e7229aedf975/Supernatural.S09E20.Bloodlines.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/11d436250230d9a709a2d915cfb4c560/Supernatural.S09E22.Stairway.To.Heaven.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/03257b44310cf44f5be4b2e874a0825c/Supernatural.S09E22.Stairway.To.Heaven.720p.WEB-DL.DD5.1.H.264-ECI.part2.rar.html", "http://rapidgator.net/file/ce895c6d6d028adebb6aa1b780e422dc/Supernatural.S09E23.Do.You.Believe.In.Miracles.720p.WEB-DL.DD5.1.H.264-ECI.part1.rar.html", "http://rapidgator.net/file/03ce07e07ce4d40cb74075d04006fe0d/SS7HXDm.mkv.html"])
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^
SyntaxError: invalid syntax
